Fake FlingingRenderer's buffering state changes

When we seek a video being casted with the FlingingRenderer, time never
gets updated on the phone after the seek completes. This is because
Blink doesn't get the appropriate seek completion signals, since WMPI's
buffering state never goes back to BUFFERING_HAVE_ENOUGH.

This CL fixes issue by always returning BUFFERING_HAVE_ENOUGH in
FlingingRenderer::StartPlayingFrom(). Because there is no need to buffer
when using the FR, we can always consider the media pipeline to be fully
buffered. Sending a buffering state change in StartPlayingFrom() might
be suprising, but we do the same with the MediaPlayerRenderer, and it
has not caused any (known) problems so far.

Bug: 875517
Change-Id: If6069d501af12ec20f844d0adc1ea980935fb99f
Reviewed-on: https://chromium-review.googlesource.com/1184060
Commit-Queue: Thomas Guilbert <tguilbert@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586086}
Former-commit-id: d9fd6f562e7e0361004d747f145d4caead845d37